--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ honcho==1.0.1
 idna==2.7
 mysqlclient==1.3.13
 pytz==2018.5
-requests==2.19.1
-urllib3==1.23
+requests==2.20.0
+urllib3==1.24.1
+colorama==0.4.0
+django-bootstrap4==0.0.7
